@@ -347,28 +347,6 @@
 						    </mx:Component>
 						   </mx:headerRenderer>
 					     </mx:DataGridColumn>
-				         <mx:DataGridColumn width="80"  editable="false" headerText="Read 1 Clusters PF (M)" dataField="@read1ClustersPassedFilterM"> 						             						             
-						   <mx:headerRenderer > 
-						    <mx:Component>
-						    	<mx:VBox verticalGap="0"   horizontalScrollPolicy="off" horizontalAlign="center" verticalAlign="middle">
-							        <mx:Label text="Read 1 Clusters"/>
-							        <mx:Label text="PF (M)"/>
-				    			</mx:VBox>
-						    </mx:Component>
-						   </mx:headerRenderer>
-					     </mx:DataGridColumn>
-						<mx:DataGridColumn width="80"  editable="false" headerText="Read 2 Clusters PF (M)" dataField="@read2ClustersPassedFilterM"> 						             						             
-							<mx:headerRenderer > 
-								<mx:Component>
-									<mx:VBox verticalGap="0" horizontalScrollPolicy="off" horizontalAlign="center" verticalAlign="middle">
-										<mx:Label text="Read 2 Clusters"/>
-										<mx:Label text="PF (M)"/>
-									</mx:VBox>
-								</mx:Component>
-							</mx:headerRenderer>
-						 </mx:DataGridColumn>
-						 <mx:DataGridColumn width="80"  editable="false" headerText="Q30 (Gb)" dataField="@q30Gb"/> 						             						             
-				         <mx:DataGridColumn width="80"  editable="false" headerText="File name" dataField="@fileName"/> 						             						             
 					     <mx:DataGridColumn headerText="Last Cycle Status" width="80" dataField="@lastCycleStatus"
 	                          editorDataField="value" sortable="false" editable="{currentState == 'LanesAdminState'}" rendererIsEditor="false"   
 	                          itemRenderer="mx.controls.Label" 
