@@ -111,15 +111,10 @@ public class WorkItemSolexaPipelineParser implements Serializable {
     } else {
       channel.setRead1ClustersPassedFilterM(null);
     } 
-    if (n.getAttributeValue("read2ClustersPassedFilterM") != null && !n.getAttributeValue("read2ClustersPassedFilterM").equals("")) {
-      channel.setRead2ClustersPassedFilterM(Integer.valueOf(n.getAttributeValue("read2ClustersPassedFilterM")));
+    if (n.getAttributeValue("q30PercentForDisplay") != null && !n.getAttributeValue("q30PercentForDisplay").equals("")) {
+      channel.setQ30Percent(new BigDecimal(n.getAttributeValue("q30PercentForDisplay")).movePointLeft(2));
     } else {
-      channel.setRead2ClustersPassedFilterM(null);
-    } 
-    if (n.getAttributeValue("q30Gb") != null && !n.getAttributeValue("q30Gb").equals("")) {
-      channel.setQ30Gb(new BigDecimal(n.getAttributeValue("q30Gb")));
-    } else {
-      channel.setQ30Gb(null);
+      channel.setQ30Percent(null);
     } 
     if (n.getAttributeValue("fileName") != null && !n.getAttributeValue("fileName").equals("")) {
       channel.setFileName(n.getAttributeValue("fileName"));
