@@ -12,6 +12,10 @@
 * Flow Cell Edit does not update the run folder if any of the pieces used to build it are null.  Pieces are Cluster Gen Date, instrument, run number, side and bar code.
 * Folder can no longer be editted in the data pipeline grid. 
 * Actual # Cycles is now editable in the Data Pipeline
+* Cluster info, Q30 and file name removed from experiment grids.
+* Read 2 cluster removed from all spots shown (Flow Cell edit, Data pipeline, Flow Cell Report)  Also removed from backend.
+* Read 1 cluster renamed to Cluster.
+* Q30GB replaced by Q30Percent in system.  This includes Pipeline, flow cell edit and flow cell report.
 
 5.3.6
 --------------------
